# rasterizer

./: CMakeLists.txt  README.md
shaders/: fragment.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
src/: camera.h  main.cpp  mesh.h
